--- a/IR_library/main/Makefile
+++ b/IR_library/main/Makefile
@@ -2,7 +2,7 @@ CC=g++
 IDIR=../include/
 IDIRS=-I../include/
 
-LDIR=-L../lib/
+LDIR=-L../lib/ -L../gtest/
 CFLAGS=-std=c++14 -Wall -O2 $(IDIRS) $(LDIR) -fopenmp
 ODIR=../obj/
 SRCDIR=
@@ -25,6 +25,9 @@ $(EXEC_PATH)mod2R: $(SRCDIR)mod2R.cpp $(DEPS)
 
 $(EXEC_PATH)checkRigidBodyMotion: $(SRCDIR)checkRigidBodyMotion.cpp $(DEPS) | $(EXEC_PATH)
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@ 
+
+gradeAll: $(SRCDIR)gradeAll.cpp $(DEPS) | $(EXEC_PATH)
+	$(CC) $(CFLAGS) $(LIBS) $< -lgtest -lpthread -o $(EXEC_PATH)$@ 
 
 $(EXEC_PATH):
 	mkdir -p $(EXEC_PATH)
