--- a/IR_library/main/Makefile
+++ b/IR_library/main/Makefile
@@ -2,7 +2,8 @@ CC=g++
 IDIR=../include/
 IDIRS=-I../include/
 
-LDIR=-L../lib/ -L../gtest/
+LDIR=-L../lib/
+GTESTDIR=-L../gtest/
 CFLAGS=-std=c++14 -Wall -O2 $(IDIRS) $(LDIR) -fopenmp
 ODIR=../obj/
 SRCDIR=
@@ -27,7 +28,7 @@ $(EXEC_PATH)checkRigidBodyMotion: $(SRCDIR)checkRigidBodyMotion.cpp $(DEPS) | $(
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@ 
 
 gradeAll: $(SRCDIR)gradeAll.cpp $(DEPS) | $(EXEC_PATH)
-	$(CC) $(CFLAGS) $(LIBS) $< -lgtest -lpthread -o $(EXEC_PATH)$@ 
+	$(CC) $(CFLAGS) $(GTESTDIR) $< $(LIBS) -lgtest -lpthread -o $(EXEC_PATH)$@ 
 
 $(EXEC_PATH):
 	mkdir -p $(EXEC_PATH)
